Crée la classe Filtre

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -48,3 +48,19 @@ img {
 	flex-direction: column;
 	justify-content: space-between;
 }
+
+.livre__flex {
+	display: flex;
+	justify-content: space-between;
+}
+.livre__prix {
+	font-size: 1rem;
+	font-weight: 600;
+}
+
+.livre__button {
+	border: 1px solid black;
+	padding: 0.3rem 0.5rem;
+	background-color: white;
+	font-weight: 600;
+}
