Ajouter un modal au panier

--- a/assets/styles/4-elements/elements.css
+++ b/assets/styles/4-elements/elements.css
@@ -34,3 +34,17 @@ p {
 img {
 	width: 100%;
 }
+
+th,
+td {
+	width: 15rem;
+	padding: 0.2rem 0.5rem;
+	font-size: 0.9rem;
+	text-align: left;
+	line-height: 1.2rem;
+}
+
+th:last-child,
+td:last-child {
+	width: 4rem;
+}
