--- a/assets/styles/6-components/components.css
+++ b/assets/styles/6-components/components.css
@@ -82,18 +82,28 @@
 	flex: 1;
 }
 
-/* .panier {
-	position: sticky;
-} */
-
 .panier__detail {
 	position: absolute;
+	padding: 1rem;
 	right: 6vw;
-	/* width: 22rem; */
+	margin-top: 0.5rem;
 	border: 1px solid black;
 	background-color: white;
-	padding: 1rem;
-	margin-top: 1rem;
+}
+
+.panier__detail::before {
+	border-style: solid;
+	border-width: 1px 1px 0 0;
+	content: "";
+	display: inline-block;
+	background-color: white;
+	height: 0.45em;
+	right: 3.2vw;
+	position: absolute;
+	top: -5px;
+	transform: rotate(315deg);
+	vertical-align: top;
+	width: 0.45em;
 }
 
 .panier__detail--ferme {
@@ -106,4 +116,12 @@
 
 .panier__somme {
 	font-weight: bold;
+}
+
+.panier__icon::before {
+	content: "";
+	display: block;
+	background: url("../../../assets/img/panier.svg") no-repeat;
+	width: 30px;
+	height: 30px;
 }
