--- a/assets/styles/6-components/panier.css
+++ b/assets/styles/6-components/panier.css
@@ -15,7 +15,7 @@
 
 .panier__detail {
 	position: absolute;
-	padding: 1rem;
+	padding: 0.5rem 1.5rem;
 	right: 6vw;
 	margin-top: 0.5rem;
 	border: 1px solid black;
